--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -5,11 +9,9 @@ body {
 
 #product-overview {
   background: #ff1b68;
-  padding: 20px;
-  border-color: black;
-  border-width: 5px;
-  border-style: solid;
-  margin: 20px;
+  width: 100%;
+  height: 528px;
+  padding: 10px;
 }
 
 .section-title {
@@ -19,4 +21,53 @@ body {
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+}
+
+.main-header {
+  background-color: #2ddf5c;
+  padding: 8px 16px;
+  width: 100%;
+}
+
+.main-header > div {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.main-nav {
+  display: inline-block;
+  text-align: right;
+  width: calc(100% - 75px);
+  vertical-align: middle;
+}
+
+.main-nav__items {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.main-nav__item {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.main-nav__item > a {
+  text-decoration: none;
+  color: #0e4f1f;
+}
+
+.main-nav__item a:hover {
+  color: white;
+}
+
+.main-nav__item a:active {
+  color: white;
 }
