--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #product-overview {
-  background: #ff1b68;
+  background: url("freedom.jpg");
   width: 100%;
   height: 528px;
   padding: 10px;
@@ -62,12 +62,25 @@ body {
 .main-nav__item > a {
   text-decoration: none;
   color: #0e4f1f;
+  font-weight: bold;
 }
 
-.main-nav__item a:hover {
-  color: white;
-}
-
+.main-nav__item a:hover,
 .main-nav__item a:active {
   color: white;
+  border-bottom: 5px solid white;
+}
+
+.main-nav__item--cta a {
+  background-color: #ff1b68;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+  border: none;
+  color: #ff1b68;
+  background-color: white;
 }
