--- a/practice/practice.css
+++ b/practice/practice.css
@@ -1,27 +1,29 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  margin: 0;
+  font-family: sans-serif;
 }
 
-.main-elemets > div {
-  display: inline-block;
+nav {
+  margin-bottom: 16px;
+  background: #fa923f;
+  padding: 8px 0;
 }
 
-.main-elemets div {
-  padding: 20px 50px;
-  background-color: black;
+a {
+  text-decoration: none;
   color: white;
-  height: 300px;
-  width: 40%;
+  margin: 10px;
 }
 
-.main-div {
-  display: none;
+a.active {
+  color: #521571;
 }
 
-.main-div2:hover {
-  background-color: white;
+.main-section {
+  height: 800px;
+  border: 1px solid #ccc;
+  padding: 16px;
+}
+
+.highlighted {
+  border: 2px solid #fa923f;
 }
