--- a/main.css
+++ b/main.css
@@ -48,6 +48,22 @@ body {
   border-radius: 8px;
 }
 
+.plan__title {
+  color: #0e4f1f;
+}
+
+.plan__price {
+  color: #858585;
+}
+
+.plan--highlighted .plan__title {
+  color: white;
+}
+
+.plan--highlighted .plan__price {
+  color: #0e4f1f;
+}
+
 .plan__features {
   list-style: none;
   margin: 0;
@@ -56,6 +72,23 @@ body {
 
 .plan__feature {
   margin: 8px;
+}
+
+.button {
+  background-color: #0e4f1f;
+  color: white;
+  font: inherit;
+  border: 1.5px solid #0e4f1f;
+  padding: 8px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+  color: #0e4f1f;
+  background-color: white;
 }
 
 .main-header {
