--- a/main.css
+++ b/main.css
@@ -1,12 +1,19 @@
 #product-overview {
-  background: url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat
-    border-box;
+  /* background: url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat
+    border-box; */
   /* background-image: url("freedom.jpg");
   background-size: cover;
   background-position: left 10% bottom 20%; */
   /* background-repeat: no-repeat;
   background-origin: border-box;
   background-clip: border-box; */
+  /* background-image: linear-gradient(
+    180deg,
+    red 50%,
+    blue 70%,
+    rgba(0, 0, 0, 0.5)
+  ); */
+  background-image: radial-gradient(20px at 20% 50%, red, blue, green);
   width: 100%;
   height: 528px;
   padding: 10px;
