--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 #product-overview {
-  /* background: url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat
-    border-box; */
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6), 10%, transparent),
+    url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box,
+    #ff1b68;
   /* background-image: url("freedom.jpg");
   background-size: cover;
   background-position: left 10% bottom 20%; */
@@ -13,7 +14,7 @@
     blue 70%,
     rgba(0, 0, 0, 0.5)
   ); */
-  background-image: radial-gradient(20px at 20% 50%, red, blue, green);
+  /* background-image: radial-gradient(20px at 20% 50%, red, blue, green);*/
   width: 100%;
   height: 528px;
   padding: 10px;
