--- a/main.css
+++ b/main.css
@@ -1,25 +1,19 @@
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, 0.6), 10%, transparent),
-    url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box,
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("images/freedom.jpg") left 10% bottom 70% / cover no-repeat border-box,
     #ff1b68;
   /* background-image: url("freedom.jpg");
-  background-size: cover;
-  background-position: left 10% bottom 20%; */
+    background-size: cover;
+    background-position: left 10% bottom 20%; */
   /* background-repeat: no-repeat;
-  background-origin: border-box;
-  background-clip: border-box; */
-  /* background-image: linear-gradient(
-    180deg,
-    red 50%,
-    blue 70%,
-    rgba(0, 0, 0, 0.5)
-  ); */
-  /* background-image: radial-gradient(20px at 20% 50%, red, blue, green);*/
-  width: 100%;
-  height: 528px;
-  padding: 10px;
-  margin-top: 43px;
-  /* border: 5px red dashed; */
+    background-origin: border-box;
+    background-clip: border-box; */
+  /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
+  /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
+  width: 100vw;
+  height: 33vh;
+  margin-top: 2.75rem;
+  /* border: 5px dashed red; */
   position: relative;
 }
 
@@ -34,7 +28,6 @@
   position: absolute;
   bottom: 5%;
   left: 3%;
-  width: 100%;
 }
 
 .plan__list {
@@ -44,26 +37,26 @@
 }
 
 .plan {
-  background-color: #d5ffdc;
+  background: #d5ffdc;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
 }
 
 .plan--highlighted {
-  background-color: #19b84c;
+  background: #19b84c;
   color: white;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
-  background-color: white;
+  background: white;
   color: #19b84c;
+  padding: 0.5rem;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-  padding: 8px;
   border-radius: 8px;
 }
 
@@ -90,18 +83,18 @@
 }
 
 .plan__feature {
-  margin: 8px;
+  margin: 0.5rem 0;
 }
 
 #key-features {
-  background-color: #ff1b68;
-  margin-top: 80px;
-  padding: 16px;
+  background: #ff1b68;
+  margin-top: 5rem;
+  padding: 1rem;
 }
 
 #key-features .section-title {
   color: white;
-  margin: 32px;
+  margin: 2rem;
 }
 
 .key-feature__list {
@@ -118,18 +111,22 @@
 }
 
 .key-feature__image {
-  background-color: #ffcede;
+  background: #ffcede;
   width: 128px;
   height: 128px;
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
-  padding: 20px;
+  padding: 1.5rem;
 }
 
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: white;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
+
+/* h1 {
+    font-family: sans-serif;
+} */
