--- a/shared.css
+++ b/shared.css
@@ -10,21 +10,21 @@ body {
 .backdrop {
   position: fixed;
   display: none;
-  top: 0%;
-  left: 0%;
+  top: 0;
+  left: 0;
   z-index: 100;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
 }
 
 .main-header {
-  background-color: #2ddf5c;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  padding: 8px 16px;
-  width: 100%;
+  background: #2ddf5c;
+  padding: 0.5rem 1rem;
   z-index: 1;
 }
 
@@ -37,8 +37,8 @@ body {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  font-size: 22px;
-  height: 22px;
+  font-size: 1.5rem;
+  height: 1.5rem;
   /* width: 20px; */
   display: inline-block;
 }
@@ -51,25 +51,26 @@ body {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 75px);
+  width: calc(100% - 74px);
   vertical-align: middle;
 }
 
 .main-nav__items {
-  padding: 0;
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .main-nav__item {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
-.main-nav__item > a {
+.main-nav__item a {
   text-decoration: none;
   color: #0e4f1f;
   font-weight: bold;
+  padding: 0.2rem 0;
 }
 
 .main-nav__item a:hover,
@@ -79,23 +80,23 @@ body {
 }
 
 .main-nav__item--cta a {
-  background-color: #ff1b68;
   color: white;
-  padding: 8px 16px;
+  background: #ff1b68;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
 .main-nav__item--cta a:active {
-  border: none;
   color: #ff1b68;
-  background-color: white;
+  background: white;
+  border: none;
 }
 
 .main-footer {
-  background-color: black;
-  padding: 32px;
-  margin-top: 48px;
+  background: black;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
 .main-footer__links {
@@ -107,7 +108,7 @@ body {
 
 .main-footer__link {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .main-footer__link a {
@@ -116,16 +117,16 @@ body {
 }
 
 .main-footer__link a:hover,
-.main-footer__link a:hover {
+.main-footer__link a:active {
   color: #ccc;
 }
 
 .button {
-  background-color: #0e4f1f;
+  background: #0e4f1f;
   color: white;
   font: inherit;
   border: 1.5px solid #0e4f1f;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 8px;
   font-weight: bold;
   cursor: pointer;
@@ -133,8 +134,8 @@ body {
 
 .button:hover,
 .button:active {
+  background: white;
   color: #0e4f1f;
-  background-color: white;
 }
 
 .button:focus {
