responsiveness, there is is problem with the main img on homepage: it is not centered

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("images/freedom.jpg") center/ cover no-repeat border-box, #ff1b68;
+    url("images/freedom.jpg") center/cover no-repeat border-box, #ff1b68;
   /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%; */
@@ -25,7 +25,7 @@
   font-size: 1.6rem;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 40rem) and (min-height: 60rem) {
   #product-overview {
     height: 40vh;
     background-position: 50% 25%;
@@ -40,23 +40,17 @@
   text-align: center;
 }
 
-/* .plan__list {
-  width: 100%;
-  text-align: center;
-} */
-
 .plan {
   background: #d5ffdc;
   text-align: center;
   padding: 1rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   width: 100%;
 }
 
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .plan__annotation {
@@ -93,6 +87,24 @@
   margin: 0.5rem 0;
 }
 
+@media (min-width: 40rem) {
+  .plan__list {
+    width: 100%;
+    text-align: center;
+  }
+
+  .plan {
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+    min-width: 13rem;
+    max-width: 25rem;
+  }
+  .plan--highlighted {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  }
+}
+
 #key-features {
   background: #ff1b68;
   margin-top: 5rem;
@@ -111,10 +123,13 @@
   text-align: center;
 }
 
-.key-feature {
-  display: inline-block;
-  width: 30%;
-  vertical-align: top;
+@media (min-width: 40rem) {
+  .key-feature {
+    vertical-align: top;
+    display: inline-block;
+    max-width: 25rem;
+    width: 30%;
+  }
 }
 
 .key-feature__image {
