--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
   /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
   width: 100vw;
   height: 33vh;
-  margin-top: 2.75rem;
+  margin-top: 3.75rem;
   /* border: 5px dashed red; */
   position: relative;
 }
@@ -25,11 +25,12 @@
   font-size: 1.6rem;
 }
 
-@media (min-width: 40rem) and (min-height: 60rem) {
+@media (min-width: 40rem), (min-height: 60rem) {
   #product-overview {
     height: 40vh;
     background-position: 50% 25%;
   }
+
   #product-overview h1 {
     font-size: 3rem;
   }
@@ -100,6 +101,7 @@
     min-width: 13rem;
     max-width: 25rem;
   }
+
   .plan--highlighted {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   }
@@ -123,15 +125,6 @@
   text-align: center;
 }
 
-@media (min-width: 40rem) {
-  .key-feature {
-    vertical-align: top;
-    display: inline-block;
-    max-width: 25rem;
-    width: 30%;
-  }
-}
-
 .key-feature__image {
   background: #ffcede;
   width: 128px;
@@ -147,6 +140,15 @@
   font-weight: bold;
   color: white;
   font-size: 1.2rem;
+}
+
+@media (min-width: 40rem) {
+  .key-feature {
+    display: inline-block;
+    width: 30%;
+    max-width: 25rem;
+    vertical-align: top;
+  }
 }
 
 /* h1 {
