--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,12 +1,15 @@
+main {
+  padding-top: 2.5rem;
+}
+
 .testimonial {
   font-size: 1.2rem;
 }
 
-/*   */
-
-.testimonial:first-of-type {
-  margin-top: 6rem;
-}
+/* .testimonial__list {
+  width: 80%;
+  margin: auto;
+} */
 
 .testimonial__image-container {
   width: 100%;
@@ -22,9 +25,6 @@
 .testimonial__info {
   text-align: right;
   padding: 0.9rem;
-  /* display: inline-block; */
-  /* vertical-align: middle; */
-  /* width: 30%; */
 }
 
 #customer-2.testimonial {
