--- a/start-hosting/start-hosting.css
+++ b/start-hosting/start-hosting.css
@@ -24,14 +24,19 @@ main {
   width: 100%;
 }
 
+.signup-form input.invalid,
+.signup-form select.invalid {
+}
+
 /* .signup-form input[type="checkbox"]  */
 .signup-form input[id*="terms"],
 .signup-form input[id*="terms"] + label {
   display: inline-block;
   width: auto;
+  vertical-align: bottom;
 }
 
-.signup-form input,
+.signup-form input:not([type="checkbox"]),
 .signup-form select {
   border: 1px solid #ccc;
   padding: 0.2rem 0.5rem;
@@ -43,6 +48,21 @@ main {
   outline: none;
   background-color: #d8f3df;
   border-color: #2ddf5c;
+}
+
+.signup-form input[type="checkbox"] {
+  border: 1px solid #ccc;
+  background-color: white;
+  width: 1rem;
+  height: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.signup-form input[type="checkbox"]:checked {
+  background-color: #2ddf5c;
+  border-color: #0e4f1f;
 }
 
 .signup-form button[type="submit"] {
