--- a/packages/packages.css
+++ b/packages/packages.css
@@ -54,7 +54,8 @@ main {
   color: #0e4f1f;
   background-color: white;
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: 900;
+  font-style: italic;
 }
 
 .clearfix {
